@@ -14,6 +14,7 @@
 * Changed checkbox/radio button space allocation algorithm for Menu and MenuItem.
 * Updated dependencies file.
 * Added test build for Windows using MSYS2.
+* Updated build scripts.
 
 === 1.0.7 ===
 * Added possibility to enable/disable Knob's scale actions.
